--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <ul>
 
     <li>
-      <a href="/01-task.html">promisification: Напиши функцию delay(ms)</a>
+      <a href="./01-task.html">promisification: Напиши функцию delay(ms)</a>
     </li>
     <li>
-      <a href="/02-task.html">promisification: Перепиши функцию toggleUserState()</a>
+      <a href="./02-task.html">promisification: Перепиши функцию toggleUserState()</a>
     </li>
     <li>
-      <a href="/03-task.html">promisification: Перепиши функцию makeTransaction</a>
+      <a href="./03-task.html">promisification: Перепиши функцию makeTransaction</a>
     </li>
 
 
