--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
 
 
     <!-- <li>
-      <a href="/04-notifiaction.html">notifiaction, Veb.24.1-2 </a>
+      <a href="./04-notifiaction.html">notifiaction, Veb.24.1-2 </a>
     </li>
     <li>
-      <a href="/05-timer.html">timer direct, Veb.24.1-2</a>
+      <a href="./05-timer.html">timer direct, Veb.24.1-2</a>
     </li>
   
 
 
     <li>
-      <a href="/24-intro.html">intro, Veb.24</a>
+      <a href="./24-intro.html">intro, Veb.24</a>
     </li>
     <li>
-      <a href="/24-promise.html">promise, Veb.24</a>
+      <a href="./24-promise.html">promise, Veb.24</a>
     </li>
     <li>
-      <a href="/24-racetrack.html">racetrack, Veb.24</a>
+      <a href="./24-racetrack.html">racetrack, Veb.24</a>
     </li> -->
 
   </ul>
